--- a/package.json
+++ b/package.json
@@ -15,22 +15,22 @@
     "next",
     "dart-scss"
   ],
-  "author": "AS Developers <feedback@asdevs.dev>",
+  "author": "AS Developers",
   "repository": {
     "type": "git",
     "url": "https://github.com/AS-Devs/json2scss-map.git"
   },
   "license": "ISC",
   "dependencies": {
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.21",
     "minimist": "^1.2.5",
     "through2": "^4.0.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.10.4",
-    "@babel/core": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
-    "chai": "^4.2.0",
-    "mocha": "^8.0.1"
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "chai": "^4.3.4",
+    "mocha": "^9.1.3"
   }
 }
