--- a/package.json
+++ b/package.json
@@ -1,25 +1,23 @@
 {
   "name": "json2scss-map",
-  "version": "1.4.2",
-  "description": "Covert JSON into scss map. Utility Tool for those who want there theme colors and font can be modified from json , but also use all the scss feature using scss varibles.",
+  "version": "1.5.0",
+  "description": "This is an utility tool for the developers to customizing colors, fonts & other whitelabel stuff and compiling into SCSS variable. So, anyone can change the look & feel of your app in just few steps.",
   "main": "lib/json2scss.js",
   "bin": "lib/bin/json2scss",
   "scripts": {
     "test": "make test",
     "prepare": "npm test"
   },
-  "keywords": [
-    "sass",
-    "JSON",
-    "scss",
-    "next",
-    "dart-scss"
-  ],
+  "keywords": ["sass", "JSON","scss","next","dart-scss","colors", "HEX", "HSL", "RGB"],
   "author": "AS Developers",
   "repository": {
     "type": "git",
     "url": "https://github.com/AS-Devs/json2scss-map.git"
   },
+  "bugs": {
+    "url": "https://github.com/AS-Devs/json2scss-map/issues"
+  },
+  "homepage": "https://github.com/AS-Devs/json2scss-map", 
   "license": "ISC",
   "dependencies": {
     "lodash": "^4.17.21",
